--- a/practice/friends-app/app.css
+++ b/practice/friends-app/app.css
@@ -106,6 +106,11 @@
     text-align: right;
     padding: 1vh;
 }
+.connection_message {
+    padding: 10px;
+    color: green;
+    font-size: 1.2rem;
+}
 @media screen and (max-width: 460px) {
     .results {
         justify-content: center;
