--- a/practice/html-movie-seat-booking/app.css
+++ b/practice/html-movie-seat-booking/app.css
@@ -90,6 +90,9 @@
         line-height: 35px;
         margin: 3.5px;
     }
+    .seat__input:focus + .seat {
+        box-shadow: 0 0 0 2.1px green;
+    }
 }
 @media screen and (max-width: 500px) {
     .film__title, .film__date, .film__time {
